[Qt][WK2] REGRESSION(r128245): It made zillion API tests fail https://bugs.webkit.org/show_bug.cgi?id=96531

Reviewed by Jocelyn Turcotte.

Preferences have to be updated after the drawing area was created
for compositing mode to be set.

* WebProcess/WebPage/WebPage.cpp:
(WebKit::WebPage::WebPage):

Canonical link: https://commits.webkit.org/114543@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@128457 268f45cc-cd09-0410-ab3c-d52691b4dbfc